--- a/src/components/multi-organisation-unit/multi-organisation-unit.html
+++ b/src/components/multi-organisation-unit/multi-organisation-unit.html
@@ -2,7 +2,7 @@
   <loading [loadingSize]="'large'" [loadingMessage]="loadingMessage"></loading>
 </div>
 <div *ngIf="!isLoading">
-  <div *ngFor="let organisationUnit of organisationUnits;let currentIndex = index;">
+  <div *ngFor="let organisationUnit of organisationUnits;let currentIndex = index;trackBy: trackByFn">
     <multi-organisation-unit-tree [hasOrgUnitChildrenOpened]="hasOrgUnitChildrenOpened" [organisationUnit]="organisationUnit"
       (activate)="onActivateOu($event)" (deactivate)="onDeactivateOu($event)" [currentUser]="currentUser" [selectedOrgUnits]="selectedOrgUnits"
       [toggledOuIds]="toggledOuIds"></multi-organisation-unit-tree>
