--- a/src/components/data-set-report-row/data-set-report-row.html
+++ b/src/components/data-set-report-row/data-set-report-row.html
@@ -6,14 +6,14 @@
       </th>
     </tr>
     <tr *ngIf="dataElement.categoryCombo.name !='default'">
-      <th *ngFor="let categoryOptionCombo of dataElement.categoryCombo.categoryOptionCombos" class="inputLabel">
+      <th *ngFor="let categoryOptionCombo of dataElement.categoryCombo.categoryOptionCombos;trackBy: trackByFn" class="inputLabel">
         {{ categoryOptionCombo.name }}
       </th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th *ngFor="let categoryOptionCombo of dataElement.categoryCombo.categoryOptionCombos">
+      <th *ngFor="let categoryOptionCombo of dataElement.categoryCombo.categoryOptionCombos;trackBy: trackByFn">
         {{ dataObject[dataElement.id + "-" + categoryOptionCombo.id] }}
       </th>
     </tr>
