--- a/src/components/language-translation-selection/language-translation-selection.html
+++ b/src/components/language-translation-selection/language-translation-selection.html
@@ -10,7 +10,7 @@
   <ion-row>
     <ion-col>
       <ion-list>
-        <ion-item *ngFor="let translationCode of translationCodes" (click)="selectLanguage(translationCode)">
+        <ion-item *ngFor="let translationCode of translationCodes;trackBy: trackByFn" (click)="selectLanguage(translationCode)">
           <span ion-text [color]="(translationCode.code == currentLanguage) ?'current' : 'font-color'">{{ translationCode.name }}</span>
           <span item-right ion-text [color]="(translationCode.code == currentLanguage) ?'current' : 'font-color'">{{ translationCode.code }}</span>
         </ion-item>
