--- a/src/components/program-stage-event-based/program-stage-event-based.html
+++ b/src/components/program-stage-event-based/program-stage-event-based.html
@@ -27,7 +27,7 @@
               <tr *ngIf="programStageSection.dataElements">
                 <td>
                   <div text-left>
-                    <div *ngFor="let dataElement of programStageSection.dataElements">
+                    <div *ngFor="let dataElement of programStageSection.dataElements;trackBy: trackByFn">
                       <event-input-container [dataElement]="dataElement" [currentUser]="currentUser" [data]="dataObjectModel" [mandatory]="'false'"
                         [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" (onChange)="updateData($event)"></event-input-container>
                     </div>
@@ -53,7 +53,7 @@
       </div>
       <div *ngIf="programStage.programStageSections && programStage.programStageSections  && programStage.programStageSections.length == 0">
         <div *ngIf="programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0 ">
-          <div *ngFor="let programStageDataElement of programStage.programStageDataElements">
+          <div *ngFor="let programStageDataElement of programStage.programStageDataElements;trackBy: trackByFn">
             <div *ngIf="programStageDataElement.dataElement && programStageDataElement.dataElement.id">
               <event-input-container [dataElement]="programStageDataElement.dataElement" [currentUser]="currentUser" [data]="dataObjectModel"
                 [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [mandatory]="programStageDataElement.compulsory"
