--- a/src/components/tracker-event-container/tracker-event-container.html
+++ b/src/components/tracker-event-container/tracker-event-container.html
@@ -23,7 +23,7 @@
 </div>
 <div *ngIf="currentOpenEvent['eventDate'] && currentOpenEvent['eventDate'] !=''">
   <div *ngIf="programStage.programStageSections && programStage.programStageSections  && programStage.programStageSections.length > 0">
-    <div *ngFor="let programStageSection of programStage.programStageSections" padding-bottom>
+    <div *ngFor="let programStageSection of programStage.programStageSections;trackBy: trackByFn" padding-bottom>
       <table width="100%">
         <tbody>
           <tr>
@@ -34,7 +34,7 @@
           <tr *ngIf="programStageSection.dataElements">
             <td>
               <div text-left>
-                <div *ngFor="let dataElement of programStageSection.dataElements">
+                <div *ngFor="let dataElement of programStageSection.dataElements;trackBy: trackByFn">
                   <event-input-container [dataElement]="dataElement" [currentUser]="currentUser" [data]="dataObjectModel" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass"
                     [mandatory]="'false'" (onChange)="updateData($event)"></event-input-container>
                 </div>
@@ -47,7 +47,7 @@
   </div>
   <div *ngIf="programStage.programStageSections && programStage.programStageSections  && programStage.programStageSections.length == 0">
     <div *ngIf="programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0 ">
-      <div *ngFor="let programStageDataElement of programStage.programStageDataElements">
+      <div *ngFor="let programStageDataElement of programStage.programStageDataElements;trackBy: trackByFn">
         <div *ngIf="programStageDataElement.dataElement && programStageDataElement.dataElement.id">
           <event-input-container [dataElement]="programStageDataElement.dataElement" [currentUser]="currentUser" [data]="dataObjectModel"
             [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [mandatory]="programStageDataElement.compulsory"
