Fixing rendering of forms based on layout set on data entry setting

--- a/src/components/input-container/input-container.html
+++ b/src/components/input-container/input-container.html
@@ -1,5 +1,5 @@
 <div *ngIf="dataElement && dataElement.categoryCombo && dataElement.categoryCombo.categoryOptionCombos">
-  <div *ngIf="formLayout == 'tableLayout'" padding-bottom>
+  <div *ngIf="formLayout == 'tableLayout' || formLayout == 'customLayout'" padding-bottom>
     <table class="table table-bordered" width="100%">
       <thead>
         <tr>
