Add back button and add new event button on edit or add new event

--- a/src/components/program-stage-event-based/program-stage-event-based.html
+++ b/src/components/program-stage-event-based/program-stage-event-based.html
@@ -37,19 +37,23 @@
             </tbody>
           </table>
         </div>
-        <div no-padding>
-          <div style="display: inline-block;width: 49.3%">
-            <div float-left>
+        <<ion-row no-padding>
+          <ion-col>
+            <div class="item-card" color="font-color" ion-button clear text-justify (click)="goBack()">
+              <ion-icon name="Back" color="icon-color"></ion-icon>&nbsp; {{ translationMapper['Back']}}
             </div>
-          </div>
-          <div style="display: inline-block;width: 49.3%">
+          </ion-col>
+          <ion-col col-auto>
             <div *ngIf="canEventBeDeleted()" float-right>
+              <div class="item-card" color="font-color" ion-button clear text-justify (click)="AddNewEvent()">
+                <ion-icon name="add" color="icon-color"></ion-icon>&nbsp; {{ translationMapper['Add New']}}
+              </div>
               <div class="item-card" color="danger" ion-button clear text-justify (click)="deleteEvent(currentEvent.id)">
                 <ion-icon name="trash"></ion-icon>&nbsp; {{ translationMapper['Delete']}}
               </div>
             </div>
-          </div>
-        </div>
+          </ion-col>
+          </ion-row>
       </div>
       <div *ngIf="programStage.programStageSections && programStage.programStageSections  && programStage.programStageSections.length == 0">
         <div *ngIf="programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0 ">
@@ -60,19 +64,23 @@
                 (onChange)="updateData($event)"></event-input-container>
             </div>
           </div>
-          <div no-padding>
-            <div style="display: inline-block;width: 49.3%">
-              <div float-left>
+          <ion-row no-padding>
+            <ion-col>
+              <div class="item-card" color="font-color" ion-button clear text-justify (click)="goBack()">
+                <ion-icon name="Back" color="icon-color"></ion-icon>&nbsp; {{ translationMapper['Back']}}
               </div>
-            </div>
-            <div style="display: inline-block;width: 49.3%">
+            </ion-col>
+            <ion-col col-auto>
               <div *ngIf="canEventBeDeleted()" float-right>
+                <div class="item-card" color="font-color" ion-button clear text-justify (click)="AddNewEvent()">
+                  <ion-icon name="add" color="icon-color"></ion-icon>&nbsp; {{ translationMapper['Add New']}}
+                </div>
                 <div class="item-card" color="danger" ion-button clear text-justify (click)="deleteEvent(currentEvent.id)">
                   <ion-icon name="trash"></ion-icon>&nbsp; {{ translationMapper['Delete']}}
                 </div>
               </div>
-            </div>
-          </div>
+            </ion-col>
+          </ion-row>
         </div>
       </div>
       <div *ngIf="!(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
