--- a/src/components/program-stage-event-based/program-stage-event-based.html
+++ b/src/components/program-stage-event-based/program-stage-event-based.html
@@ -28,7 +28,7 @@
                 <td>
                   <div text-left>
                     <div *ngFor="let dataElement of programStageSection.dataElements;trackBy: trackByFn">
-                      <event-input-container [dataElement]="dataElement" [currentUser]="currentUser" [data]="dataObjectModel" [mandatory]="'false'"
+                      <event-input-container [dataElement]="dataElement" [currentUser]="currentUser" [(data)]="dataObjectModel" [mandatory]="'false'"
                         [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" (onChange)="updateData($event)"></event-input-container>
                     </div>
                   </div>
@@ -37,7 +37,7 @@
             </tbody>
           </table>
         </div>
-        <<ion-row no-padding>
+        <ion-row no-padding>
           <ion-col>
             <div class="item-card" color="font-color" ion-button clear text-justify (click)="goBack()">
               <ion-icon name="Back" color="icon-color"></ion-icon>&nbsp; {{ translationMapper['Back']}}
@@ -53,13 +53,13 @@
               </div>
             </div>
           </ion-col>
-          </ion-row>
+        </ion-row>
       </div>
       <div *ngIf="programStage.programStageSections && programStage.programStageSections  && programStage.programStageSections.length == 0">
         <div *ngIf="programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0 ">
           <div *ngFor="let programStageDataElement of programStage.programStageDataElements;trackBy: trackByFn">
             <div *ngIf="programStageDataElement.dataElement && programStageDataElement.dataElement.id">
-              <event-input-container [dataElement]="programStageDataElement.dataElement" [currentUser]="currentUser" [data]="dataObjectModel"
+              <event-input-container [dataElement]="programStageDataElement.dataElement" [currentUser]="currentUser" [(data)]="dataObjectModel"
                 [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [mandatory]="programStageDataElement.compulsory"
                 (onChange)="updateData($event)"></event-input-container>
             </div>
