--- a/src/pages/coordinate-modal/components/coordinate/coordinate.html
+++ b/src/pages/coordinate-modal/components/coordinate/coordinate.html
@@ -1,2 +1,4 @@
-<div id="map" style="width:100%; height:100%;">
+<div id="coordinate-selection" style="width:100%; height:100%;">
 </div>
+
+Josep chingalo
