Adding coordinate selection component into coordinate input

--- a/src/components/coordinate-input/coordinate-input.html
+++ b/src/components/coordinate-input/coordinate-input.html
@@ -1,12 +1,12 @@
 <ion-row>
   <ion-col col-5>
     <div class="item-card full-width" padding color="font-color" text-justify (click)="openMap()">
-      lat
+      {{ position.lat }}
     </div>
   </ion-col>
   <ion-col col-5>
     <div class="item-card full-width" padding color="font-color" text-justify (click)="openMap()">
-      lng
+      {{ position.lng}}
     </div>
   </ion-col>
   <ion-col col-auto>
