--- a/src/components/input-container/input-container.html
+++ b/src/components/input-container/input-container.html
@@ -50,6 +50,10 @@
                 <coordinate-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
                   [data]="data"></coordinate-input>
               </div>
+              <div *ngIf="dataElement.valueType == 'ORGANISATION_UNIT'">
+                <organisation-unit-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
+                  [data]="data"></organisation-unit-input>
+              </div>
 
               <div *ngIf="supportValueTypes.indexOf(dataElement.valueType) == -1">
                 <div padding>
@@ -102,6 +106,10 @@
         <div *ngIf="dataElement.valueType == 'COORDINATE'">
           <coordinate-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
             [data]="data"></coordinate-input>
+        </div>
+        <div *ngIf="dataElement.valueType == 'ORGANISATION_UNIT'">
+          <organisation-unit-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
+            [data]="data"></organisation-unit-input>
         </div>
 
         <div *ngIf="supportValueTypes.indexOf(dataElement.valueType) == -1">
