--- a/src/components/tracked-entity-inputs/tracked-entity-inputs.html
+++ b/src/components/tracked-entity-inputs/tracked-entity-inputs.html
@@ -43,6 +43,11 @@
         [data]="data">
       </coordinate-input>
     </div>
+    <div *ngIf="trackedEntityAttribute.valueType == 'ORGANISATION_UNIT'">
+      <organisation-unit-input (onChange)="updateValue($event)" [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'"
+        [data]="data">
+      </organisation-unit-input>
+    </div>
 
     <div *ngIf="supportValueTypes.indexOf(trackedEntityAttribute.valueType) == -1">
       <div padding>
