--- a/src/components/coordinate-input/coordinate-input.html
+++ b/src/components/coordinate-input/coordinate-input.html
@@ -1,15 +1,18 @@
 <ion-row>
-  <ion-col col-5>
-    <div class="item-card full-width" padding color="font-color" text-justify (click)="openMap()">
+  <ion-col col-4>
+    <div class="full-width" padding color="font-color" text-justify (click)="openMap()">
       {{ position.lat }}
     </div>
   </ion-col>
-  <ion-col col-5>
-    <div class="item-card full-width" padding color="font-color" text-justify (click)="openMap()">
+  <ion-col col-4>
+    <div class="full-width" padding color="font-color" text-justify (click)="openMap()">
       {{ position.lng}}
     </div>
   </ion-col>
   <ion-col col-auto>
+    <button color="danger" outline ion-button [disabled]="(position.lat == '' && position.lng == '')" (tap)="clearValue()">
+      <ion-icon name="trash" color="danger"></ion-icon>
+    </button>
     <div class="item-card" color="font-color" ion-button clear text-justify (click)="openMap()">
       <ion-icon name="locate" color="primary"></ion-icon>
       <br>
