--- a/src/components/tracked-entity-inputs/tracked-entity-inputs.html
+++ b/src/components/tracked-entity-inputs/tracked-entity-inputs.html
@@ -48,6 +48,16 @@
         [data]="data">
       </organisation-unit-input>
     </div>
+    <div *ngIf="trackedEntityAttribute.valueType == 'UNIT_INTERVAL'">
+      <unit-interval-input (onChange)="updateValue($event)" [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'"
+        [data]="data">
+      </unit-interval-input>
+    </div>
+    <div *ngIf="trackedEntityAttribute.valueType == 'PERCENTAGE'">
+      <percentage-input (onChange)="updateValue($event)" [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'"
+        [data]="data">
+      </percentage-input>
+    </div>
 
     <div *ngIf="supportValueTypes.indexOf(trackedEntityAttribute.valueType) == -1">
       <div padding>
