--- a/src/components/organisation-unit-input/organisation-unit-input.html
+++ b/src/components/organisation-unit-input/organisation-unit-input.html
@@ -5,12 +5,14 @@
     </div>
   </ion-col>
   <ion-col col-auto>
-    <button color="danger" outline ion-button [disabled]="seletectOrganisatioUnit.name == ''" (tap)="clearValue()">
-      <ion-icon name="trash" color="danger"></ion-icon>
-    </button>
-    <div class="item-card" color="font-color" ion-button clear text-justify (click)="openOrganisationUnitSelection()">
-      <img class="side-menu-icon" [src]="icons.orgUnit" />
-      <br>
+    <div float-right>
+      <button color="danger" outline ion-button [disabled]="seletectOrganisatioUnit.name == ''" (tap)="clearValue()">
+        <ion-icon name="trash" color="danger"></ion-icon>
+      </button>
+      <div class="item-card" color="font-color" ion-button clear text-justify (click)="openOrganisationUnitSelection()">
+        <img class="side-menu-icon" [src]="icons.orgUnit" />
+        <br>
+      </div>
     </div>
   </ion-col>
 </ion-row>
