--- a/src/components/true-only-input-field/true-only-input-field.html
+++ b/src/components/true-only-input-field/true-only-input-field.html
@@ -1,6 +1,4 @@
-<ion-item>
-  <ion-label>Touch to select/update</ion-label>
-  <ion-select (ionChange)="updateValues()" [(ngModel)]="inputFieldValue" interface="action-sheet" >
-    <ion-option value="true">Yes</ion-option>
-  </ion-select>
+<ion-item no-lines>
+  <ion-label>Yes</ion-label>
+  <ion-checkbox [(ngModel)]="inputFieldValue" (ionChange)="updateValues()"></ion-checkbox>
 </ion-item>
