Adding email and phone number inputs field on registration form for tracker

--- a/src/components/tracked-entity-inputs/tracked-entity-inputs.html
+++ b/src/components/tracked-entity-inputs/tracked-entity-inputs.html
@@ -58,14 +58,14 @@
         [data]="data">
       </percentage-input>
     </div>
-    <div *ngIf="dataElement.valueType == 'EMAIL'">
-      <email-input (onChange)="updateValue($event)" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [dataElementId]="trackedEntityAttribute.id"
-        [categoryOptionComboId]="'trackedEntityAttribute'" [data]="data">
+    <div *ngIf="trackedEntityAttribute.valueType == 'EMAIL'">
+      <email-input (onChange)="updateValue($event)" [(dataValuesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
+        [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'" [data]="data">
       </email-input>
     </div>
-    <div *ngIf="dataElement.valueType == 'PHONE_NUMBER'">
-      <phone-number-input (onChange)="updateValue($event)" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [dataElementId]="trackedEntityAttribute.id"
-        [categoryOptionComboId]="'trackedEntityAttribute'" [data]="data">
+    <div *ngIf="trackedEntityAttribute.valueType == 'PHONE_NUMBER'">
+      <phone-number-input (onChange)="updateValue($event)" [(dataValuesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
+        [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'" [data]="data">
       </phone-number-input>
     </div>
 
