--- a/src/components/boolean-input-field/boolean-input-field.html
+++ b/src/components/boolean-input-field/boolean-input-field.html
@@ -1,7 +1,9 @@
-<ion-item>
+<!-- <ion-item>
   <ion-label>Touch to select/update</ion-label>
   <ion-select (ionChange)="updateValues()" [(ngModel)]="inputFieldValue" interface="action-sheet" >
     <ion-option value="true">Yes</ion-option>
     <ion-option value="false">No</ion-option>
   </ion-select>
-</ion-item>
+</ion-item> -->
+
+<radio-button-input [options]="options" [selectedValue]="inputFieldValue" (updateValueAction)="onUpdateValue($event)"></radio-button-input>
