Fixing saving and retrieving of values of boolen as radio buttons

--- a/src/components/boolean-input-field/boolean-input-field.html
+++ b/src/components/boolean-input-field/boolean-input-field.html
@@ -1,1 +1,1 @@
-<radio-button-input [options]="options" [fieldId]="fieldId" [selectedValue]="inputFieldValue" (updateValueAction)="onUpdateValue($event)"></radio-button-input>
+<radio-button-input [options]="options" [fieldId]="fieldId" [(selectedValue)]="inputFieldValue" (updateValueAction)="onUpdateValue($event)"></radio-button-input>
