Apply add new button on profile form

--- a/src/components/program-stage-event-based/program-stage-event-based.html
+++ b/src/components/program-stage-event-based/program-stage-event-based.html
@@ -67,7 +67,7 @@
           <ion-row no-padding>
             <ion-col>
               <div class="item-card" color="font-color" ion-button clear text-justify (click)="goBack()">
-                <ion-icon name="Back" color="icon-color"></ion-icon>&nbsp; {{ translationMapper['Back']}}
+                <ion-icon name="Back" color="icon-color"></ion-icon>&nbsp; {{ translationMapper['Go back']}}
               </div>
             </ion-col>
             <ion-col col-auto>
