Adding setting object for data entry on option set input field

--- a/src/components/option-set-input-field/option-set-input-field.html
+++ b/src/components/option-set-input-field/option-set-input-field.html
@@ -4,3 +4,5 @@
     <span *ngIf="(inputFieldValue && labelMapper && labelMapper[inputFieldValue])"> {{ labelMapper[inputFieldValue] }}</span>
   </ion-item>
 </div>
+
+{{ dataEntrySettings|json }}
