--- a/src/components/event-input-container/event-input-container.html
+++ b/src/components/event-input-container/event-input-container.html
@@ -7,8 +7,8 @@
     </span>
   </div>
   <div *ngIf="dataElement.optionSet" [ngClass]="(dataValuesSavingStatusClass[dataElement.id +'-dataElement'])?dataValuesSavingStatusClass[dataElement.id +'-dataElement']:'input-field-container'">
-    <option-set-input-field (onChange)="updateValue($event)" [optionListTitle]="fieldLabelKey" [dataElementId]="dataElement.id"
-      [categoryOptionComboId]="'dataElement'" [data]="data" [options]="dataElement.optionSet.options">
+    <option-set-input-field [dataEntrySettings]="dataEntrySettings" (onChange)="updateValue($event)" [optionListTitle]="fieldLabelKey"
+      [dataElementId]="dataElement.id" [categoryOptionComboId]="'dataElement'" [data]="data" [options]="dataElement.optionSet.options">
     </option-set-input-field>
   </div>
   <div *ngIf="!dataElement.optionSet" [ngClass]="(dataValuesSavingStatusClass[dataElement.id +'-dataElement'])?dataValuesSavingStatusClass[dataElement.id +'-dataElement']:'input-field-container'">
