--- a/src/components/tracked-entity-inputs/tracked-entity-inputs.html
+++ b/src/components/tracked-entity-inputs/tracked-entity-inputs.html
@@ -7,8 +7,8 @@
     </span>
   </div>
   <div *ngIf="trackedEntityAttribute.optionSet" [ngClass]="(trackedEntityAttributesSavingStatusClass[trackedEntityAttribute.id +'-trackedEntityAttribute'])?trackedEntityAttributesSavingStatusClass[trackedEntityAttribute.id +'-trackedEntityAttribute']:'input-field-container'">
-    <option-set-input-field (onChange)="updateValue($event)" [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'"
-      [data]="data" [options]="trackedEntityAttribute.optionSet.options">
+    <option-set-input-field [dataEntrySettings]="dataEntrySettings" (onChange)="updateValue($event)" [dataElementId]="trackedEntityAttribute.id"
+      [categoryOptionComboId]="'trackedEntityAttribute'" [data]="data" [options]="trackedEntityAttribute.optionSet.options">
     </option-set-input-field>
   </div>
   <div *ngIf="!trackedEntityAttribute.optionSet" [ngClass]="(trackedEntityAttributesSavingStatusClass[trackedEntityAttribute.id +'-trackedEntityAttribute'])?trackedEntityAttributesSavingStatusClass[trackedEntityAttribute.id +'-trackedEntityAttribute']:'input-field-container'">
