Linking data entry settings for rendering options as list or radio

--- a/src/components/option-set-input-field/option-set-input-field.html
+++ b/src/components/option-set-input-field/option-set-input-field.html
@@ -4,5 +4,4 @@
     <span *ngIf="(inputFieldValue && labelMapper && labelMapper[inputFieldValue])"> {{ labelMapper[inputFieldValue] }}</span>
   </ion-item>
 </div>
-
-{{ dataEntrySettings|json }}
+shouldDisplayAsRadio :: {{ shouldDisplayAsRadio }}
