Passing though formLyaout into stages as well as adding data and programTrackedEntityAttributes

--- a/src/pages/tracker-capture/components/tracker-registration-form/tracker-registration-form.html
+++ b/src/pages/tracker-capture/components/tracker-registration-form/tracker-registration-form.html
@@ -1,5 +1,6 @@
 <div *ngIf="formLayout === 'customLayout' && trackerRegistrationForm && trackerRegistrationForm !== '' ">
-  <custom-data-entry-form [entryFormType]="entryFormType" [dataEntryFormDesign]="trackerRegistrationForm"></custom-data-entry-form>
+  <custom-data-entry-form [entryFormType]="entryFormType" [dataEntryFormDesign]="trackerRegistrationForm" [data]="dataObject"
+    [programTrackedEntityAttributes]="programTrackedEntityAttributes"></custom-data-entry-form>
 </div>
 <div *ngIf="!(formLayout === 'customLayout' && trackerRegistrationForm && trackerRegistrationForm !== '' )">
   <div *ngIf="programTrackedEntityAttributes && programTrackedEntityAttributes.length > 0">
