--- a/src/pages/tracker-capture/components/program-stage-tracker-based/program-stage-tracker-based.html
+++ b/src/pages/tracker-capture/components/program-stage-tracker-based/program-stage-tracker-based.html
@@ -2,6 +2,7 @@
   <loading [loadingSize]="'large'" [loadingMessage]="loadingMessage"></loading>
 </div>
 <div *ngIf="!isLoading" class="over-flow-container">
+  formLayout : {{ formLayout }}
   <div *ngIf="tableLayout && tableLayout.headers && tableLayout.headers.length > 0">
     <table class="table table-bordered" width="100%">
       <thead *ngIf="tableLayout && tableLayout.headers">
